<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D59A9A"
    android:backgroundTint="#3A3A37"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/et_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scrollbarSize="4dp"
            android:textAlignment="center"
            app:srcCompat="@drawable/resistencia2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Valor"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rg_franja1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/rb_cafe1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FDF8F8"
                    android:backgroundTint="#7A4230"
                    android:text="@string/cafe"
                    android:textColor="#070707"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_rojo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FDF8F8"
                    android:backgroundTint="#FD011F"
                    android:text="@string/rojo"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_naranja1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAF7F7"
                    android:backgroundTint="#FF5722"
                    android:text="@string/naranja"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F4F0F0"
                    android:backgroundTint="#FAC504"
                    android:text="@string/amarillo" />

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FBFAFA"
                    android:backgroundTint="#7AF104"
                    android:text="@string/verde" />

                <RadioButton
                    android:id="@+id/radioButton15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FDFCFC"
                    android:backgroundTint="#093AEC"
                    android:text="@string/azul" />

                <RadioButton
                    android:id="@+id/radioButton16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAF7F7"
                    android:backgroundTint="#9E38F6"
                    android:text="@string/morado" />

                <RadioButton
                    android:id="@+id/radioButton17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4C4747"
                    android:text="@string/gris" />

                <RadioButton
                    android:id="@+id/radioButton18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3EFEF"
                    android:text="@string/blanco" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg_franja2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0C0C0C"
                    android:text="@string/negro"
                    android:textColor="#F4F2F2" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#9A553F"
                    android:text="@string/cafe" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F60202"
                    android:text="@string/rojo" />

                <RadioButton
                    android:id="@+id/radioButton19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FF5722"
                    android:text="@string/naranja" />

                <RadioButton
                    android:id="@+id/radioButton20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAC504"
                    android:text="@string/amarillo" />

                <RadioButton
                    android:id="@+id/radioButton21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#7AF104"
                    android:text="@string/verde" />

                <RadioButton
                    android:id="@+id/radioButton22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#093AEC"
                    android:text="@string/azul" />

                <RadioButton
                    android:id="@+id/radioButton23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#9E38F6"
                    android:text="@string/morado" />

                <RadioButton
                    android:id="@+id/radioButton24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4C4747"
                    android:text="@string/gris" />

                <RadioButton
                    android:id="@+id/radioButton25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F8F4F4"
                    android:text="@string/blanco" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg_franja3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0C0C0C"
                    android:text="@string/negro"
                    android:textColor="#FAF6F6" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#9A553F"
                    android:text="@string/cafe" />

                <RadioButton
                    android:id="@+id/radioButton9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F60202"
                    android:text="@string/rojo" />

                <RadioButton
                    android:id="@+id/radioButton26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FF5722"
                    android:text="@string/morado" />

                <RadioButton
                    android:id="@+id/radioButton27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAC504"
                    android:text="@string/amarillo" />

                <RadioButton
                    android:id="@+id/radioButton28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#7AF104"
                    android:text="@string/verde" />

                <RadioButton
                    android:id="@+id/radioButton29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#093AEC"
                    android:text="@string/azul" />

                <RadioButton
                    android:id="@+id/radioButton30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#9E38F6"
                    android:text="@string/morado" />

                <RadioButton
                    android:id="@+id/radioButton31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4C4747"
                    android:text="@string/gris" />

                <RadioButton
                    android:id="@+id/radioButton32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FBF9F9"
                    android:text="@string/blanco" />

                <RadioButton
                    android:id="@+id/radioButton33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffbf00"
                    android:text="@string/dorado" />

                <RadioButton
                    android:id="@+id/radioButton34"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#82898f"
                    android:text="@string/Plateado"
                    android:textSize="14sp" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg_franja4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/radioButton10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#9A553F"
                    android:text="@string/cafe" />

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F60202"
                    android:text="@string/rojo" />

                <RadioButton
                    android:id="@+id/radioButton12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#7AF104"
                    android:text="@string/verde" />

                <RadioButton
                    android:id="@+id/radioButton35"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#093AEC"
                    android:text="@string/azul" />

                <RadioButton
                    android:id="@+id/radioButton36"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#9E38F6"
                    android:text="@string/morado" />

                <RadioButton
                    android:id="@+id/radioButton37"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4C4747"
                    android:text="@string/gris" />

                <RadioButton
                    android:id="@+id/radioButton38"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffbf00"
                    android:text="@string/dorado" />

                <RadioButton
                    android:id="@+id/radioButton39"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#82898f"
                    android:text="@string/Plateado" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</LinearLayout>